<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_miscellaneous"
    app:behavior_peekHeight = "@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/miscellaneous_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/miscellaneous"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/_10sdp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/view_color_1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_color_1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/view_color_2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_color_2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/view_color_3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_color_3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/view_color_4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_color_4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/view_color_5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_color_5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/pick_color_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_12sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_image_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons"/>
        <TextView
            android:id="@+id/add_image_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textColor="@color/colorIcons"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_6sdp"
            android:textSize="@dimen/_14ssp"/>
    </LinearLayout>
</LinearLayout>