<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/bottom_sheet_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".core_presentation.ui.fragments.AddNoteFragment">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_arrow_back_img"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/colorIcons"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_done_img"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/background_done_button"
                android:tint="@color/colorIcons"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="@id/ic_arrow_back_img"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/title_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:textColorHint="@color/colorTextHint"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/ic_done_img"/>

            <EditText
                android:id="@+id/subtitle_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:textColorHint="@color/colorTextHint"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/subtitle_indicator"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/title_edt"/>
            <View
                android:id="@+id/subtitle_indicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:background="@drawable/background_indicator_subtitle"
                app:layout_constraintStart_toStartOf="@id/title_edt"
                app:layout_constraintTop_toTopOf="@id/subtitle_edt"
                app:layout_constraintBottom_toBottomOf="@id/subtitle_edt"/>

            <ImageView
                android:id="@+id/image_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/subtitle_edt" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/delete_image"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorDelete"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/image_img"
                app:layout_constraintTop_toTopOf="@id/image_img"/>
            <TextView
                android:id="@+id/link_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/image_img"
                app:layout_constraintStart_toStartOf="@id/subtitle_indicator"
                app:layout_constraintEnd_toEndOf="@id/subtitle_edt"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/delete_auto_link"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorDelete"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/link_tv"
                app:layout_constraintBottom_toBottomOf="@id/link_tv"/>
            <EditText
                android:id="@+id/description_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:hint="@string/description"
                android:textColorHint="@color/colorTextHint"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="@dimen/_100sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/subtitle_indicator"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/image_img"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/miscellaneous_layout"
        layout="@layout/layout_miscellaneous"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>